# living_cv

./: Cargo.toml  README.md  index.html
assets/: cv.typ
src/: app.rs  document.rs  main.rs  overlay.rs  popup.rs  pulse.rs
