[package]
name = "living_cv"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["default", "all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
include_dir = "0.7.4"
itertools = "0.14.0"
typst = "0.13.1"
typst-kit = { version = "0.13.1", default-features = false, features = ["fonts", "embed-fonts"]}
typst-render = "0.13.1"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
